--- a/Ruby_App_Deploy/helm/templates/deployment.yaml
+++ b/Ruby_App_Deploy/helm/templates/deployment.yaml
@@ -38,19 +38,19 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
-            tcpSocket:
-              port: 80
-            # httpGet:
-            #   path: /healthcheck
+            # tcpSocket:
             #   port: 80
-            # initialDelaySeconds: 5
-            # periodSeconds: 5
-          # readinessProbe:
-          #   # tcpSocket:
-          #   #   port: 80
-          #   httpGet:
-          #     path: /healthcheck
-          #     port: 80s
+            httpGet:
+              path: /healthcheck
+              port: 80
+            initialDelaySeconds: 15
+            periodSeconds: 10
+          readinessProbe:
+            # tcpSocket:
+            #   port: 80
+            httpGet:
+              path: /healthcheck
+              port: 80
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
