--- a/Ruby_App_Deploy/helm/values.yaml
+++ b/Ruby_App_Deploy/helm/values.yaml
@@ -50,8 +50,8 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    # - host: k8.localhost
-    - paths:
+    - host: k8.localhost
+      paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
