--- a/Ruby_App_Deploy/helm/values.yaml
+++ b/Ruby_App_Deploy/helm/values.yaml
@@ -46,7 +46,7 @@ ingress:
   enabled: true
   # className: "nginx"
   annotations:
-    # nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
